[package]
name = "pixdl"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["cargo"] }
colored = "3.0.0"
futures-util = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["cookies", "gzip", "json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
